k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-web-service
  namespace: default
  labels:
    app: demo-web
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    name: http
  selector:
    app: demo-web
